--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 <body>
     <h1>JS Tutorials</h1>
 </body>
-<script src="tut-2.js"></script>
+<!-- <script src="tut-2.js"></script> -->
+<script src="tut-3.js"></script>
 
 </html>
