--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <h1>JS Tutorials</h1>
 </body>
 <!-- <script src="tut-2.js"></script> -->
-<script src="tut-3.js"></script>
+<!-- <script src="tut-3.js"></script> -->
+<script src="tut-4.js"></script>
 
 </html>
