Day-4 Tut-5 Type Conversion (TypeCasting) & Type Coercion

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 </body>
 <!-- <script src="tut-2.js"></script> -->
 <!-- <script src="tut-3.js"></script> -->
-<script src="tut-4.js"></script>
+<!-- <script src="tut-4.js"></script> -->
+<script src="tut-5.js"></script>
 
 </html>
