Day-5 Tut-6 String Properties String Methods Template Literals & Js Folder Added.

--- a/index.html
+++ b/index.html
@@ -17,9 +17,11 @@
 <body>
     <h1>JS Tutorials</h1>
 </body>
-<!-- <script src="tut-2.js"></script> -->
-<!-- <script src="tut-3.js"></script> -->
-<!-- <script src="tut-4.js"></script> -->
-<script src="tut-5.js"></script>
+<!-- <script src="./Js/tut-2.js"></script> -->
+<!-- <script src="./Js/tut-3.js"></script> -->
+<!-- <script src="./Js/tut-4.js"></script> -->
+<!-- <script src="./Js/tut-5.js"></script> -->
+<script src="./Js/tut-6.js"></script>
+
 
 </html>
